# empty-frontend

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: cf_worker_deployment.yml  check_artifacts.yml  code_coverage.yml  tests_and_checks.yml
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  error.rs  mock_querier.rs  state.rs  testing.rs
contracts/factory/tests/: factory_helper.rs  factory_integration.rs  integration.rs
contracts/pair/: Cargo.toml
contracts/pair/src/: contract.rs  error.rs  mock_querier.rs  state.rs  testing.rs
contracts/pair/tests/: integration.rs  pair_integration.rs
contracts/pair_concentrated/: Cargo.toml
contracts/pair_concentrated/examples/: pair_concentrated_schema.rs
contracts/pair_concentrated/src/: contract.rs  error.rs  queries.rs  utils.rs
contracts/pair_concentrated/tests/: helper.rs  pair_concentrated_integration.rs  pair_concentrated_simulation.rs
contracts/periphery/native_coin_registry/: Cargo.toml
contracts/periphery/native_coin_registry/src/: contract.rs
contracts/periphery/native_coin_registry/tests/: coin_registry_integration.rs
contracts/router/: Cargo.toml
contracts/router/examples/: router_schema.rs
contracts/router/src/: contract.rs  error.rs  state.rs
contracts/router/src/testing/: mock_querier.rs  tests.rs
contracts/router/tests/: factory_helper.rs  router_integration.rs
contracts/tokenomics/incentives/: Cargo.toml
contracts/tokenomics/incentives/src/: execute.rs  migrate.rs  query.rs  reply.rs  state.rs  utils.rs
contracts/tokenomics/incentives/tests/: incentives_integration_tests.rs  incentives_simulations.rs  test_case
contracts/tokenomics/incentives/tests/helper/: helper.rs  mod.rs
e2e_testing/: basic_scenario.ts  codegen.ts  config.json  deploy.ts  deployed.json  lib.ts  package-lock.json  package.json
e2e_testing/bbn-testnet/: add_cw20_liquidity.ts  add_liquidity.ts  add_liquidity_all.ts  add_liquidity_xyk.ts  contracts.json  deployed.json  incentives_all_pools.ts  insert_contracts.ts  pool_deploy.ts  single_pool_deploy.ts  store_and_migrate.ts  swap.ts  tokens.json  update_pool_fees.ts  withdraw_liquidity.ts
e2e_testing/bbn-testnet/relayer/: README.md  bbn-test-5.json  pion-1.json
e2e_testing/contracts/: cw20_base.wasm
e2e_testing/docker/: docker-compose.yml
e2e_testing/docker/terra/: Dockerfile
e2e_testing/mainnet/: assets.ts  config.json  contracts.json  deploy_dex.ts  deploy_lbtc_baby_pcl.ts  deploy_lbtc_usdc.ts  deployed.json  insert_contracts.ts  lib.ts  lp_and_swap.ts  pcl_params.ts  pool_deploy.ts  simulate.ts  tsconfig.json  upload_code.sh  xyk_pools.ts
e2e_testing/mainnet/pools/: deploy_cbaby_baby.ts  deploy_ebaby_baby.ts  deploy_lbtc_baby_pcl.ts  deploy_lbtc_usdc_xyk.ts  deploy_solvbtc_baby.ts  deploy_solvbtc_usdc.ts  deploy_union_btcs.ts  deploy_xSolvBTC_satXSolvBTC.ts  redeploy_btc_pools.ts  redeploy_lbtc_baby_pcl.ts
e2e_testing/sdk/: AstroportFactory.client.ts  AstroportFactory.message-composer.ts  AstroportFactory.types.ts  AstroportIncentives.client.ts  AstroportIncentives.message-composer.ts  AstroportIncentives.types.ts  AstroportNativeCoinRegistry.client.ts  AstroportNativeCoinRegistry.message-composer.ts  AstroportNativeCoinRegistry.types.ts  AstroportPair.client.ts  AstroportPair.message-composer.ts  AstroportPair.types.ts  AstroportPairConcentrated.client.ts  AstroportPairConcentrated.message-composer.ts  AstroportPairConcentrated.types.ts  AstroportRouter.client.ts  AstroportRouter.message-composer.ts  AstroportRouter.types.ts  index.ts
frontend/: .gitignore  .prettierrc  global.d.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/abis/: CLPoolAbi.json  NonfungiblePositionManager.json
frontend/actions/: addLiquidity.ts  claimRewards.ts  connect.ts  dexActions.ts  disconnect.ts  execute.ts  getAccount.ts  getBalance.ts  getBalances.ts  getConnectorClient.ts  getCw20Allowance.ts  getCw20Balance.ts  getErc20Contract.ts  getPublicClient.ts  getWalletClient.ts  increaseAllowance.ts  poolSwap.ts  reconnect.ts  stakeLiquidity.ts  unstakeLiquidity.ts  watchAccount.ts  withdrawLiquidity.ts
frontend/app/: globals.css  layout.tsx
frontend/app/components/: TransactionsTable.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: index.ts  useAPR.ts  (+37 more)
frontend/config/: contracts.ts  cosmi.ts  index.ts  redis.ts
frontend/lib/: config.ts  contracts.ts  mockPools.ts  publicClient.ts
frontend/multisig/: connector.ts  provider.ts
frontend/services/: coingecko.ts  lru.ts  redis.ts
frontend/store/: client.ts  config.ts  emitter.ts  hydratate.ts  storage.ts
frontend/stores/: priceRangeStore.ts
frontend/trpc/: client.ts  index.ts  router.ts  routers.ts
frontend/types/: chain.ts  client.ts  cometbft.ts  config.ts  connectors.ts  currency.ts  emitter.ts  encoding.ts  http.ts  index.ts  modal.ts  pool.ts  rpc.ts  storage.ts  transports.ts  utils.ts
frontend/utils/: browser.ts  consts.ts  convertLiquidityToTokenAmounts.ts  deepEqual.ts  formatTxErrors.ts  global.ts  intl.ts  masks.ts  modal.tsx  superjson.ts
indexer/: .env.example  .env.testing  README.md  drizzle.config.ts  global.d.ts  package.json  tsconfig.json
indexer/sql/: export.sql  schema.sql
indexer/src/: index.ts  indexer.ts  types.ts
indexer/tests/: config.ts  index.test.ts
schemas/astroport-factory/: astroport-factory.json
schemas/astroport-incentives/: astroport-incentives.json
schemas/astroport-pair/: astroport-pair.json
schemas/astroport-pair-concentrated/: astroport-pair-concentrated.json
schemas/astroport-router/: astroport-router.json
scripts/: build_release.sh
supabase/: config.toml
supabase/.temp/: pooler-url  postgres-version  project-ref
supabase/functions/: .env.example  README.md
trpc/: global.d.ts  package.json  tsconfig.json  wrangler.toml
trpc/src/: callers.ts  config.ts  index.ts  router.ts
types/: package.json
types/src/: cache.ts  contracts.ts  currency.ts  index.ts  indexer.ts  pool.ts
(+176 files in other folders)
