[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_concentrated",
    "contracts/router",
    "contracts/tokenomics/*",
]

[workspace.dependencies]
cosmwasm-std = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
thiserror = "2.0"
itertools = "0.14.0"
cosmwasm-schema = "2.2"
cw-utils = "2.0"
astroport = { path = "./packages/astroport", version = "5.7.0" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[patch.'https://github.com/astroport-fi/astroport-core']
astroport = { path = "packages/astroport" }
