[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_concentrated",
    "contracts/router",
    "contracts/periphery/*",
    "contracts/tokenomics/*",
]

[workspace.dependencies]
cosmwasm-std = "2.2"
cw-storage-plus = { version = "2.0", features = ["macro"] }
cw2 = "2.0"
cw20 = "2.0"
cw20-base = "2.0"
thiserror = "2.0"
itertools = "0.14.0"
cosmwasm-schema = "2.2"
cw-utils = "2.0"
astroport = { path = "./packages/astroport", version = "5.7.0" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true
