[package]
name = "astroport-pair"
version = "2.1.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport constant product pool contract implementation"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
integer-sqrt = "0.1"
astroport.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true

[dev-dependencies]
cw-multi-test = "2.3"
astroport-incentives = { path = "../tokenomics/incentives" }
cw20-base = { version = "2.0", features = ["library"] }
astroport-factory = { path = "../factory" }
proptest = "1.0"
prost = "0.11.5"
astroport-test = { path = "../../packages/astroport_test" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }