[package]
name = "astroport-pair-concentrated"
version = "4.1.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport concentrated liquidity pair"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
astroport.workspace = true
astroport-pcl-common = { path = "../../packages/astroport_pcl_common", version = "2.1" }
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
itertools.workspace = true
cw-utils.workspace = true

[dev-dependencies]
cw-multi-test = "2.3"
cw20-base = "2.0"
astroport-incentives = { path = "../tokenomics/incentives" }
astroport-test = { path = "../../packages/astroport_test" }
astroport-factory = { path = "../factory" }
proptest = "1.0"
anyhow = "1.0"
derivative = "2.2"
astroport-native-coin-registry = { path = "../periphery/native_coin_registry" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
