[package]
name = "astroport-router"
version = "1.2.1"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport router contract - provides multi-hop swap functionality for Astroport pools"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw2.workspace = true
cw20 = "2.0"
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt = "0.1"
astroport.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
cw-multi-test = "2.3"
astroport-factory = { path = "../factory" }
cw20-base = "2.0"
astroport-pair = { path = "../pair" }
astroport-test = { path = "../../packages/astroport_test" }
anyhow = "1.0"
