[package]
name = "astroport-incentives"
version = "1.3.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport Incentives Contract distributing rewards to LP stakers"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
cw20 = "2.0"
cw-utils.workspace = true
astroport.workspace = true
thiserror.workspace = true
itertools.workspace = true

[dev-dependencies]
cw-multi-test = "2.3"
anyhow = "1"
astroport-factory = { path = "../../factory" }
astroport-pair = { path = "../../pair" }
astroport-native-coin-registry = { path = "../../periphery/native_coin_registry" }
astroport-test = { path = "../../../packages/astroport_test" }
cw20-base = "2.0"
proptest = "1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
